# bd_project

./: README.md  config.py  dbmanager.py  main.py  pyproject.toml  utils.py
