[tool.poetry]
name = "bd-project"
version = "0.1.0"
description = ""
authors = ["Sergey Shiryaev <shiryaev_fox@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
configparser = "^6.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
